Autenticação de usuário, geração de token Jwt e configuração do Swagger

--- a/src/BlogDoXim.ApiDados/appsettings.json
+++ b/src/BlogDoXim.ApiDados/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "SecretKey": "EBF72B6D-F69F-4A5C-9C96-0C735F1C1D03" 
+  }
 }
